package edu.fiuba.algo3.modelo.fases;

public interface ResultadoFase {

    boolean huboEliminacion();
}
